# edms-simulator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  context.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simulation_state.json
.aws-bootstrap/: github-cicd-iam-policy.json  inline-policy.json
.github/workflows/: aws.yaml  ci.yaml  task_definition.json
api/: admin.py  exports.py  health.py  main.py  middleware.py  reports.py  routes.py  schemas.py
config/: schedule.yaml
core/: tenancy.py
core/aggregation/: entity_state_builder.py  events.py  golden_record_builder.py  service.py  status.py
core/connectors/: base_connector.py  s3_connector.py
core/context/: assembler.py  models.py  webhook_publisher.py
core/credit/: assembler.py  parser.py
core/graph/: incremental_builder.py  models.py  navigator.py  (+2 more)
docs/: API.md  ARCHITECTURE.md  PRD.md  README.md
infra/: schema.sql
scripts/: EDMS_Mortgage_Entity_Model.xlsx  apply_schema.py  demo_loan.py  feed_chaos_loans.py  feed_synthetic_loan.py  generate_chaos_loans.py  generate_realworld_simulation.py  generate_realworld_simulation_v3.py  generate_s3_simulation.py  generate_scale_simulation.py  pdf_formats.py  reset_v3_data.sql  run_backtest.py  run_simulation.py  seed_loans.py  seed_mismo_registry.py  simulate_local.py  simulate_s3_edms.py  smoke_aggregation.py  smoke_api.py  smoke_identity.py  smoke_income.py  stress_test.py  stress_test_indexing.py  verify_pdf_extraction.py  verify_scale_results.py  watch_pipeline.py
tests/: conftest.py
(+141 files in other folders)
