[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edms-simulator"
version = "0.1.0"
description = "Enterprise Data Management System simulator (production Aurora + Redis + S3 + ECS)."
requires-python = ">=3.10"
readme = "docs/README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*", "infra*"]
